--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
           aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
           use_existing_version_if_available: false
           application_name: spring-boot-deploy
-          environment_name: Springbootdeploy-env
+          environment_name: Springbootdeploy-env-1
           version_label: ${{github.SHA}}
           region: us-east-1
           deployment_package: data-0.0.1-SNAPSHOT.jar
